--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -27,10 +28,13 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@prisma/client": "^5.10.1",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.13",
     "@types/node": "^16.0.0",
     "eslint": "^8.56.0",
+    "prisma": "^5.10.1",
     "source-map-support": "^0.5.20",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
