--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
