--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
     "@types/express": "^4.17.13",
     "@types/node": "^20.11.20",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.3.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "prisma": "^5.10.1",
     "source-map-support": "^0.5.20",
+    "supertest": "^6.3.4",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4",
